--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,3 +1,10 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+body {
+    background-color: #1d223c;
+    color: white; /* optional, damit Text lesbar bleibt */
+    margin: 0; /* kein Standardrand */
+    font-family: sans-serif; /* optional */
+  }
